output/juice_p5_125_end/foundry_validation/F-001_Unbounded_stakeWeek_lets_a_staker_mint/forge_stdout_attempt3.log
Compiler run failed:
Error (9429): This looks like an address but has an invalid checksum. Correct checksummed address: "0x8584DdbD1E28bCA4bc6Fb96baFe39f850301940e". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
SyntaxError: This looks like an address but has an invalid checksum. Correct checksummed address: "0x8584DdbD1E28bCA4bc6Fb96baFe39f850301940e". If this is not used as an address, please prepend '00'. For more information please see https://docs.soliditylang.org/en/develop/types.html#address-literals
  --> src/FlawVerifier.sol:68:39:
   |
68 |         IJuiceStaking(address(uint160(0x8584ddbd1e28bca4bc6fb96bafe39f850301940e)));
   |                                       ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

